Add translation key

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
+  "api": {
+    "unexpectedError": "Unexpected error occured"
+  },
   "auth": {
     "accountActivated": "Your account has been activated successfully.",
     "forgottenPasswordSent": "An e-mail with further instructions has been sent to your e-mail address."
