--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -3,19 +3,13 @@
     "success": "Your e-mail has been confirmed successfully. You can log in now."
   },
   "forgottenPassword": {
-    "email": {
-      "label": "E-mail"
-    },
+    "email": "E-mail",
     "success": "An e-mail with further instructions has been sent to your e-mail address."
   },
   "logIn": {
-    "email": {
-      "label": "E-mail"
-    },
+    "email": "E-mail",
     "forgotPassword": "Forgot password?",
-    "password": {
-      "label": "Password"
-    },
+    "password": "Password",
     "submit": "Log In"
   },
   "menu": {
@@ -23,19 +17,13 @@
     "signUp": "Sign Up"
   },
   "resetPassword": {
-    "password": {
-      "label": "New Password"
-    },
+    "password": "New Password",
     "success": "Your password was changed successfully. You can log in now."
   },
   "signUp": {
-    "email": {
-      "label": "E-mail",
-      "taken": "This e-mail is already used. Please log in or use another e-mail."
-    },
-    "password": {
-      "label": "Password"
-    },
+    "email": "E-mail",
+    "emailTaken": "This e-mail is already used. Please log in or use another e-mail.",
+    "password": "Password",
     "submit": "Sign Up",
     "success": "Your account has been successfully created. An e-mail with further instructions has been sent to your e-mail address."
   }
