Refactor Theme and Layout

--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -6,5 +6,9 @@
   "resultError": {
     "retry": "Retry",
     "title": "Something went wrong"
+  },
+  "theme": {
+    "dark": "Dark",
+    "light": "Light"
   }
 }
