--- a/src/i18n/en/common.json
+++ b/src/i18n/en/common.json
@@ -7,7 +7,7 @@
     "retry": "Retry",
     "title": "Something went wrong"
   },
-  "theme": {
+  "themeSwitch": {
     "dark": "Dark",
     "light": "Light"
   }
