Implement changing the language

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -13,7 +13,7 @@
     "submit": "Log In"
   },
   "menu": {
-    "login": "Log In",
+    "logIn": "Log In",
     "signUp": "Sign Up"
   },
   "resetPassword": {
