Improve Auth screens

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -4,13 +4,15 @@
   },
   "forgottenPassword": {
     "email": "E-mail",
-    "success": "An e-mail with further instructions has been sent to your e-mail address."
+    "success": "An e-mail with further instructions has been sent to your e-mail address.",
+    "title": "Forgot password?"
   },
   "logIn": {
     "email": "E-mail",
     "forgotPassword": "Forgot password?",
     "password": "Password",
-    "submit": "Log In"
+    "submit": "Log In",
+    "title": "Log In"
   },
   "menu": {
     "logIn": "Log In",
@@ -18,13 +20,15 @@
   },
   "resetPassword": {
     "password": "New Password",
-    "success": "Your password was changed successfully. You can log in now."
+    "success": "Your password was changed successfully. You can log in now.",
+    "title": "Reset Password"
   },
   "signUp": {
     "email": "E-mail",
     "emailTaken": "This e-mail is already used. Please log in or use another e-mail.",
     "password": "Password",
     "submit": "Sign Up",
-    "success": "Your account has been successfully created. An e-mail with further instructions has been sent to your e-mail address."
+    "success": "Your account has been successfully created. An e-mail with further instructions has been sent to your e-mail address.",
+    "title": "Sign Up"
   }
 }
