--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,31 +1,31 @@
 {
   "confirmEmail": {
-    "success": "Your e-mail has been confirmed successfully. You can log in now."
+    "success": "Your e-mail has been confirmed successfully. You can Sign in now."
   },
   "forgottenPassword": {
     "email": "E-mail",
     "success": "An e-mail with further instructions has been sent to your e-mail address.",
     "title": "Forgot password?"
   },
-  "logIn": {
+  "signIn": {
     "email": "E-mail",
     "forgotPassword": "Forgot password?",
     "password": "Password",
-    "submit": "Log In",
-    "title": "Log In"
+    "submit": "Sign In",
+    "title": "Sign In"
   },
   "menu": {
-    "logIn": "Log In",
+    "signIn": "Sign In",
     "signUp": "Sign Up"
   },
   "resetPassword": {
     "password": "New Password",
-    "success": "Your password was changed successfully. You can log in now.",
+    "success": "Your password was changed successfully. You can Sign in now.",
     "title": "Reset Password"
   },
   "signUp": {
     "email": "E-mail",
-    "emailTaken": "This e-mail is already used. Please log in or use another e-mail.",
+    "emailTaken": "This e-mail is already used. Please Sign in or use another e-mail.",
     "password": "Password",
     "submit": "Sign Up",
     "success": "Your account has been successfully created. An e-mail with further instructions has been sent to your e-mail address.",
