--- a/src/i18n/en/dashboard.json
+++ b/src/i18n/en/dashboard.json
@@ -3,7 +3,7 @@
     "home": "Home"
   },
   "topMenu": {
-    "signOut": "Sign out",
-    "profile": "Profile"
+    "profile": "Profile",
+    "signOut": "Sign out"
   }
 }
