Refactor password reset

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -2,24 +2,19 @@
   "confirmEmail": {
     "success": "Your e-mail has been confirmed successfully. You can Sign in now."
   },
-  "forgottenPassword": {
-    "email": "E-mail",
-    "success": "An e-mail with further instructions has been sent to your e-mail address.",
-    "title": "Forgot password?"
-  },
   "menu": {
     "signIn": "Sign In",
     "signUp": "Sign Up"
   },
   "resetPassword": {
-    "password": "New Password",
-    "success": "Your password was changed successfully. You can Sign in now.",
-    "title": "Reset Password"
+    "email": "E-mail",
+    "success": "An e-mail with further instructions has been sent to your e-mail address.",
+    "title": "Forgot password?"
   },
   "signIn": {
     "email": "E-mail",
-    "forgotPassword": "Forgot password?",
     "password": "Password",
+    "resetPassword": "Forgot password?",
     "submit": "Sign In",
     "title": "Sign In"
   },
