Update auth screens

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,6 +1,6 @@
 {
   "confirmEmail": {
-    "success": "Your e-mail has been confirmed successfully. You can Sign in now."
+    "success": "Your e-mail has been confirmed. You can Sign in now."
   },
   "menu": {
     "signIn": "Sign In",
@@ -20,10 +20,13 @@
   },
   "signUp": {
     "email": "E-mail",
-    "emailTaken": "This e-mail is already used. Please Sign in or use another e-mail.",
+    "emailTaken": "This e-mail is already used. Please Sign In or use another e-mail address.",
     "password": "Password",
     "submit": "Sign Up",
-    "success": "Your account has been successfully created. An e-mail with further instructions has been sent to your e-mail address.",
+    "success": {
+      "subTitle": "Confirmation e-mail with further instructions has been sent to your e-mail address.",
+      "title": "Your account has been created."
+    },
     "title": "Sign Up"
   }
 }
