--- a/src/i18n/en/dashboard.json
+++ b/src/i18n/en/dashboard.json
@@ -1,6 +1,10 @@
 {
   "sidebarMenu": {
-    "home": "Home"
+    "bookshelf": {
+      "discover": "Discover",
+      "finished": "Finished Books",
+      "readingList": "Reading List"
+    }
   },
   "topMenu": {
     "profile": "Profile",
