--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,7 +1,4 @@
 {
-  "confirmEmail": {
-    "success": "Your e-mail has been confirmed. You can Sign in now."
-  },
   "menu": {
     "signIn": "Sign In",
     "signUp": "Sign Up"
@@ -16,12 +13,22 @@
     "password": "Password",
     "resetPassword": "Forgot password?",
     "submit": "Sign In",
-    "title": "Sign In"
+    "title": "Sign In",
+    "useMagicLink": "Sign In with Magic Link",
+    "usePassword": "Sign In with Password",
+    "withMagicLink": {
+      "submit": "Send Magic Link",
+      "success": "An e-mail with Magic Link has been sent to your e-mail address.",
+      "title": "Sign In with Magic Link"
+    }
   },
   "signUp": {
     "email": "E-mail",
-    "emailTaken": "This e-mail is already used. Please Sign In or use another e-mail address.",
     "password": "Password",
+    "resendConfirmation": {
+      "button": "Resend confirmation e-mail",
+      "success": "Confirmation e-mail has been resent."
+    },
     "submit": "Sign Up",
     "success": {
       "subTitle": "Confirmation e-mail with further instructions has been sent to your e-mail address.",
