--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -2,13 +2,18 @@
   "confirmEmail": {
     "success": "Your e-mail has been confirmed. You can Sign in now."
   },
-  "menu": {
+  "header": {
+    "chooseLanguage": "Choose Language",
+    "chooseTheme": "Choose Theme",
     "signIn": "Sign In",
     "signUp": "Sign Up"
   },
   "resetPassword": {
     "email": "E-mail",
-    "success": "An e-mail with further instructions has been sent to your e-mail address.",
+    "success": {
+      "subTitle": "An e-mail with further instructions has been sent to your e-mail address.",
+      "title": "Success"
+    },
     "title": "Forgot password?"
   },
   "signIn": {
