--- a/src/i18n/en/dashboard.json
+++ b/src/i18n/en/dashboard.json
@@ -1,13 +1,11 @@
 {
-  "sidebarMenu": {
-    "bookshelf": {
-      "discover": "Discover",
-      "finished": "Finished Books",
-      "readingList": "Reading List"
-    }
-  },
-  "topMenu": {
+  "header": {
+    "discover": "Discover Books",
+    "finished": "Finished Books",
+    "language": "Language",
     "profile": "Profile",
-    "signOut": "Sign Out"
+    "readingList": "Reading List",
+    "signOut": "Sign Out",
+    "theme": "Theme"
   }
 }
